# file-share-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  rust-analyzer.toml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  test.yml  test_build.yml
app/: Cargo.toml
app/assets/: icons.json
app/assets/associations/: extension.json  file.json  folder.json  language.json
app/src/: config.rs  error_template.rs  lib.rs  server.rs  state.rs  utils.rs
app/src/components/: breadcrumbs.rs  file_entries.rs  folder_download.rs  loading.rs  mod.rs  new_folder.rs  upload.rs  upload_bar.rs
app/src/components/file_entries/: icon.rs
app/src/components/upload/: form.rs  progress.rs  progress_bar.rs  use_upload_progress.rs
app/styles/: main.scss  tailwind.css
assets/associations/: language.json
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  fileserv.rs  main.rs
server/src/fileserv/: archive.rs
src/: app.rs  config.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  utils.rs
src/app/: server.rs  utils.rs
src/app/components/: breadcrumbs.rs  file_entries.rs  folder_download.rs  new_folder.rs  upload.rs
src/app/components/file_entries/: icon.rs
src/components/: entry.rs  file.rs  folder.rs  icon.rs  mod.rs
src/fileserv/: archive.rs  pipe.rs
src/icons_helper/: Cargo.toml
src/icons_helper/src/: lib.rs
src/pages/: files.rs  mod.rs
src/pages/files/: progress.rs  server.rs  utils.rs
src/pages/files/components/: breadcrumbs.rs  file_entries.rs  mod.rs  new_folder.rs  upload.rs
src/pages/files/components/upload/: progress.rs
