[package]
name = "file-share"
version = "1.3.2"
edition = "2021"
authors = ["Maneren <maneren731@gmail.com>"]
license = "MIT"
repository = "https://github.com/Maneren/file-share-rs"
description = "Simple HTTP file sharing server"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
leptos-use = "0.10"
server_fn = { version = "0.6", features = ["multipart"] }

async-broadcast = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true, features = ["macros", "multipart"] }
axum-server = { version = "0.6", optional = true }
cfg-if = "1"
chrono = "0.4"
chrono-humanize = "0.2"
clap = { version = "4.5", features = ["derive"], optional = true }
colored = { version = "2", optional = true }
console_error_panic_hook = "0.1"
console_log = "1"
dashmap = { version = "6", optional = true }
futures = "0.3"
http = "1.1"
if-addrs = { version = "0.13", optional = true }
libflate = { version = "2.1", optional = true }
log = "0.4"
multer = { version = "3.1.0", optional = true }
phf = { version = "0.11", features = ["macros"] }
port_check = { version = "0.2", optional = true }
qr_code = { version = "2.0", optional = true }
rust-embed = { version = "8.4", features = ["mime-guess"], optional = true }
serde = { version = "1", features = ["derive"] }
simple_logger = "5"
tar = { version = "0.4", optional = true }
thiserror = "1"
tokio = { version = "1.38", optional = true, features = ["rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs"], optional = true }
urlencoding = "2"
wasm-bindgen = "=0.2.92"
web-sys = { version = "0.3.69", features = ["File", "FileList"] }
wee_alloc = { version = "0.4", optional = true }
zip = { version = "2.1", optional = true }
zstd = { version = "0.13", optional = true }

# internal proc macro helper
icons_helper = { path = "src/icons_helper" }

[profile.dev.package.leptos_macro]
opt-level = 3

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[features]
wee_alloc = ["dep:wee_alloc"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "wee_alloc",
]
ssr = [
  "dep:async-broadcast",
  "dep:axum",
  "dep:axum-server",
  "dep:clap",
  "dep:colored",
  "dep:dashmap",
  "dep:if-addrs",
  "dep:leptos_axum",
  "dep:libflate",
  "dep:multer",
  "dep:port_check",
  "dep:qr_code",
  "dep:rust-embed",
  "dep:tar",
  "dep:tokio",
  "dep:tower-http",
  "dep:zip",
  "dep:zstd",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "file-share"
style-file = "style/main.scss"
assets-dir = "public"
lib-profile-release = "wasm-release"
tailwind-input-file = "style/tailwind.css"

bin-features = ["ssr"]
lib-features = ["hydrate"]
