[package]
name = "file-share"
version = "1.4.2"
edition = "2021"
authors = ["Maneren <maneren731@gmail.com>"]
license = "MIT"
repository = "https://github.com/Maneren/file-share-rs"
description = "Fast HTTP file sharing server with leptos GUI"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
leptos-use = "0.10"
server_fn = { version = "0.6", features = ["multipart"] }

async-broadcast = { version = "0.7", optional = true }
async-compression = { version = "0.4.11", optional = true, features = [
  "tokio",
  "gzip",
  "zstd",
] }
async-walkdir = { version = "2.0.0", optional = true }
async_zip = { version = "0.0.17", optional = true, features = [
  "deflate",
  "tokio",
] }
axum = { version = "0.7", optional = true, features = ["macros", "multipart"] }
axum-server = { version = "0.6", optional = true }
cfg-if = "1"
chrono = "0.4"
chrono-humanize = "0.2"
clap = { version = "4.5", features = ["derive"], optional = true }
console_error_panic_hook = "0.1"
console_log = "1"
# TODO: switch to release when https://github.com/dahlia-lib/dahlia-rs/pull/6 is merged
dahlia = { git = "https://github.com/Maneren/dahlia.rs", optional = true }
dashmap = { version = "6", optional = true }
futures = "0.3"
http = "1.1"
if-addrs = { version = "0.13", optional = true }
include-flate = "0.3.0"
log = "0.4"
multer = { version = "3.1.0", optional = true }
port_check = { version = "0.2", optional = true }
qr_code = { version = "2.0", optional = true }
rfd = { version = "0.14.1", optional = true, default-features = false, features = [
  "xdg-portal",
  "tokio",
] }
rust-embed = { version = "8.4", features = ["mime-guess", "compression"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.121"
simple_logger = "5"
thiserror = "1"
tokio = { version = "1.38", optional = true, features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1", optional = true }
tokio-tar = { version = "0.3", optional = true }
tokio-util = { version = "0.7.11", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
urlencoding = "2"
wasm-bindgen = "=0.2.92"
web-sys = { version = "0.3.69", features = ["File", "FileList"] }
wee_alloc = { version = "0.4", optional = true }

[profile.dev.package.leptos_macro]
opt-level = 3

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[features]
wee_alloc = ["dep:wee_alloc"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "wee_alloc",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:async-broadcast",
  "dep:async-compression",
  "dep:async-walkdir",
  "dep:async_zip",
  "dep:axum",
  "dep:axum-server",
  "dep:clap",
  "dep:dahlia",
  "dep:dashmap",
  "dep:if-addrs",
  "dep:leptos_axum",
  "dep:multer",
  "dep:port_check",
  "dep:qr_code",
  "dep:rfd",
  "dep:tokio",
  "dep:tokio-stream",
  "dep:tokio-tar",
  "dep:tokio-util",
  "dep:tower-http",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
strip = true

[package.metadata.leptos]
output-name = "file-share"
style-file = "style/main.scss"
assets-dir = "public"
lib-profile-release = "wasm-release"
tailwind-input-file = "style/tailwind.css"

bin-features = ["ssr"]
lib-features = ["hydrate"]
