[workspace.package]
edition = "2021"
authors = ["Maneren <maneren731@gmail.com>"]
license = "MIT"
repository = "https://github.com/Maneren/file-share-rs"
description = "Fast HTTP file-sharing server with Leptos GUI"
rust-version = "1.82.0"

[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[workspace.dependencies]
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = "0.6"
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
leptos-use = "0.13"
server_fn = { version = "0.6", features = ["multipart"] }

async-broadcast = "0.7"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
async-walkdir = "2.0"
async_zip = { version = "0.0.17", features = ["deflate", "tokio"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-server = "0.7"
cfg-if = "1"
chrono = "0.4"
chrono-humanize = "0.2"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
console_error_panic_hook = "0.1"
console_log = "1"
dashmap = "6"
futures = "0.3"
http = "1.1"
if-addrs = "0.13"
include-flate = "0.3"
log = "0.4"
multer = "3.1"
port_check = "0.2"
qr_code = "2.0"
rfd = { version = "0.15", default-features = false, features = [
  "xdg-portal",
  "tokio",
] }
rust-embed = { version = "8.4", features = ["mime-guess", "compression"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "5"
thiserror = "1"
tokio = { version = "1.38", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tokio-tar = "0.3"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
urlencoding = "2"
wasm-bindgen = "=0.2.93"
web-sys = { version = "0.3.70", features = ["File", "FileList"] }
web-time = "1.1"
wee_alloc = "0.4"

[profile.dev.package.leptos_macro]
opt-level = 3

[workspace.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
strip = true

[[workspace.metadata.leptos]]
name = "file-share"
style-file = "app/styles/main.scss"
assets-dir = "app/public"
lib-profile-release = "wasm-release"
tailwind-input-file = "app/styles/tailwind.css"

bin-package = "file-share"
lib-package = "file-share-frontend"
