[package]
name = "file-share-frontend"
version = "1.4.6"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
file-share-app = { path = "../app", default-features = false, features = [
  "hydrate",
] }
leptos = { workspace = true, features = ["hydrate"] }

console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
wasm-bindgen.workspace = true
wee_alloc.workspace = true
